[package]
name = "hub75-pio"
version = "0.1.0"
edition = "2021"
description = "A HUB75 driver for RP2040. Utilizes PIO and DMA to achieve zero CPU overhead."
license = "MIT"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
embedded-graphics = "0.8"
libm = "0.2"
pio-proc = "0.2"
pio = "0.2"
rp2040-hal = "0.9"




