[package]
name = "hub75-pio"
version = "0.1.0"
edition = "2021"
description = "A HUB75 driver for RP2040. Utilizes PIO and DMA to achieve zero CPU overhead."
license = "MIT"

[dependencies]
pio-proc = "0.2"
pio = "0.2.0"
libm = "0.2"
fixed = "1.23.1"

defmt = "0.3"
defmt-rtt = "0.4"
embedded-graphics = "0.8"
rp-pac = "6.0.0"
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", features = ["rp2040", "defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
